--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <h2>Filmes e séries</h2>
 <div class="categoria-vídeos">
 <div>
-<a href="https://www.youtube.com/watch?v=cs15QqG6Gjc"&gt;
-<img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg&quot; />
+<a href="https://www.youtube.com/watch?v=CetCK1A-cqU"&gt;
+<img src="https://i.ytimg.com/vi/CetCK1A-cqU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCgjrBAfKB0CNQpNmxrxjSL0lctEQ; />
 </a>
 <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8"&gt;
 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg&quot; />
