--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <div class="categoria-vídeos">
 <div>
 <a href="https://www.youtube.com/watch?v=CetCK1A-cqU"&gt;
-<img src="https://i.ytimg.com/vi/CetCK1A-cqU/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLCgjrBAfKB0CNQpNmxrxjSL0lctEQ; />
+<img src="https://www.youtube.com/results?search_query=acf+silverado+com+motor+de+supra; />
 </a>
 <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8"&gt;
 <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg&quot; />
